[tool.poetry]
name = "uservote-api"
version = "0.1.0"
description = ""
authors = ["Ethan Bonsignori <ebonsignori@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.6.1"
motor = "^3.3.2"
uvicorn = "^0.27.0.post1"
gunicorn = "^21.2.0"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
